--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Sora:wght@300;400;600&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-    --font-sora: "Sora", sans-serif;
-    --font-code: "Source Code Pro", monospace;
-    --font-grotesk: "Space Grotesk", sans-serif;
+    --font-lexend: "Lexend", monospace;
     color-scheme: light;
 }
 
@@ -24,7 +20,7 @@
 }*/
 
 .hover-btn {
-    @apply transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110  text-color-9 hover:text-color-8 md:text-n-8 md:hover:text-color-7 duration-300;
+    @apply transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 text-color-9 hover:text-color-8 md:text-n-8 md:hover:text-color-7 duration-300;
 }
 
 .rotate-45 {
