--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,36 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-    --font-lexend: "Lexend", monospace;
+    --font-robo: "Roboto Mono";
     color-scheme: light;
+    @apply font-robomono;
 }
 
 * {
     scroll-behavior: smooth;
 }
 
-/*@layer base {
-    body {
-        @apply font-sans bg-n-8 text-n-1 text-base;
-    }
-}*/
+a:hover {
+    @apply text-color-2
+}
+
+input::placeholder {
+    @apply text-color-4;
+    opacity: 1
+}
+
+input::-ms-input-placeholder {
+    /* Edge 12 -18 */
+    @apply text-color-4
+}
 
 .hover-btn {
-    @apply transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 text-color-9 hover:text-color-8 md:text-n-8 md:hover:text-color-7 duration-300;
+    @apply hover:text-color-3
 }
 
 .rotate-45 {
@@ -35,7 +45,7 @@
     @apply rotate-[135deg];
 }
 
-.rotate-180 {
+s .rotate-180 {
     @apply rotate-[180deg];
 }
 
